--- a/module5-final/index.html
+++ b/module5-final/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="utf-8">
+        <script src="js.js"></script>
     </head>
     <body>
-        <h1>Heading</h1>
+        <h1 id="heading">Heading</h1>
+        <div>
+            <span>Input here</span>
+            <input id="input" type="text">
+            <button>Enter</button>
+        </div>
 
-        <script src="js.js"></script>
+        <div id="content"></div>
+        <script src="js2.js"></script>
     </body>
 </html>
